codemp/generated/cgame/cg_localents.h

void CG_InitLocalEntities();
void CG_FreeLocalEntity( localEntity_t *le );
localEntity_t *CG_AllocLocalEntity();
void CG_BloodTrail( localEntity_t *le );
void CG_FragmentBounceMark( localEntity_t *le, trace_t *trace );
void CG_FragmentBounceSound( localEntity_t *le, trace_t *trace );
void CG_ReflectVelocity( localEntity_t *le, trace_t *trace );
void CG_AddFragment( localEntity_t *le );
void CG_AddFadeRGB( localEntity_t *le );
static void CG_AddFadeScaleModel( localEntity_t *le );
static void CG_AddMoveScaleFade( localEntity_t *le );
static void CG_AddPuff( localEntity_t *le );
static void CG_AddScaleFade( localEntity_t *le );
static void CG_AddFallScaleFade( localEntity_t *le );
static void CG_AddExplosion( localEntity_t *ex );
static void CG_AddSpriteExplosion( localEntity_t *le );
void CG_AddRefEntity( localEntity_t *le );
void CG_AddScorePlum( localEntity_t *le );
void CG_AddOLine( localEntity_t *le );
void CG_AddLine( localEntity_t *le );
void CG_AddLocalEntities();