codemp/julia/generated/cgame/cg_localents.jl

CG_InitLocalEntities() = ccall((:CG_InitLocalEntities, lib), Void, (),  );
CG_FreeLocalEntity( le_ ) = ccall((:CG_FreeLocalEntity, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AllocLocalEntity() = ccall((:CG_AllocLocalEntity, lib), localEntity_t, (),  );
CG_BloodTrail( le_ ) = ccall((:CG_BloodTrail, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_FragmentBounceMark( le_, trace_ ) = ccall((:CG_FragmentBounceMark, lib), Void, ( Ptr{localEntity_t}, Ptr{trace_t},  ), le_, trace_ );
CG_FragmentBounceSound( le_, trace_ ) = ccall((:CG_FragmentBounceSound, lib), Void, ( Ptr{localEntity_t}, Ptr{trace_t},  ), le_, trace_ );
CG_ReflectVelocity( le_, trace_ ) = ccall((:CG_ReflectVelocity, lib), Void, ( Ptr{localEntity_t}, Ptr{trace_t},  ), le_, trace_ );
CG_AddFragment( le_ ) = ccall((:CG_AddFragment, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddFadeRGB( le_ ) = ccall((:CG_AddFadeRGB, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddFadeScaleModel( le_ ) = ccall((:CG_AddFadeScaleModel, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddMoveScaleFade( le_ ) = ccall((:CG_AddMoveScaleFade, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddPuff( le_ ) = ccall((:CG_AddPuff, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddScaleFade( le_ ) = ccall((:CG_AddScaleFade, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddFallScaleFade( le_ ) = ccall((:CG_AddFallScaleFade, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddExplosion( ex_ ) = ccall((:CG_AddExplosion, lib), Void, ( Ptr{localEntity_t},  ), ex_ );
CG_AddSpriteExplosion( le_ ) = ccall((:CG_AddSpriteExplosion, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddRefEntity( le_ ) = ccall((:CG_AddRefEntity, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddScorePlum( le_ ) = ccall((:CG_AddScorePlum, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddOLine( le_ ) = ccall((:CG_AddOLine, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddLine( le_ ) = ccall((:CG_AddLine, lib), Void, ( Ptr{localEntity_t},  ), le_ );
CG_AddLocalEntities() = ccall((:CG_AddLocalEntities, lib), Void, (),  );
